--- a/notebooks/ACADIA23_BuildingGenerator.ipynb
+++ b/notebooks/ACADIA23_BuildingGenerator.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a75119d7",
+   "id": "8647bccd",
    "metadata": {
     "scrolled": true
    },
@@ -16,8 +16,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1812154c",
+   "execution_count": 2,
+   "id": "b4742ad4",
    "metadata": {
     "scrolled": true
    },
@@ -48,6 +48,8 @@
     "from topologicpy.Helper import Helper\n",
     "from topologicpy.Graph import Graph\n",
     "from topologicpy.DGL import DGL\n",
+    "import topologicpy\n",
+    "import topologic\n",
     "import math\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -57,8 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "6a8c7ac2",
+   "execution_count": 13,
+   "id": "cd1116ac",
    "metadata": {
     "scrolled": true
    },
@@ -70,13 +72,13 @@
     "# plinth: bool - make plinth yes or no\n",
     "# core: int - number of cores per building can be 1 or 2 max\n",
     "# basement: bool - True of False include a basement\n",
-    "def getSelectors(cells, key, value):\n",
+    "def getSelectors(cells, keys, values):\n",
     "    if not cells:\n",
     "        return None\n",
     "    selectors = []\n",
     "    for cell in cells:\n",
     "        s = Topology.InternalVertex(cell)\n",
-    "        d = Dictionary.ByKeyValue(key, value)\n",
+    "        d = Dictionary.ByKeysValues(keys, values)\n",
     "        s = Topology.SetDictionary(s, d)\n",
     "        selectors.append(s)\n",
     "    return selectors\n",
@@ -87,11 +89,8 @@
     "    ground = CellComplex.Prism(width=54, length=54, uSides=5, vSides=5, height=6, wSides=1, placement=\"bottom\")\n",
     "    offset = 6\n",
     "    if basement:\n",
-    "        offset = offset-3\n",
+    "        offset = offset-6\n",
     "        nf = nf+1\n",
-    "    else:\n",
-    "        if plinth:\n",
-    "            offset = offset+3\n",
     "    bldg_origins = []\n",
     "    if nt == 1:\n",
     "        bldg_origins.append(Vertex.ByCoordinates(0,0,offset))\n",
@@ -127,8 +126,7 @@
     "    for core_origin in core_origins:\n",
     "        cores.append(Cell.Prism(origin=core_origin, width=3, length=core_length, height=nf*3+3,\n",
     "                                            uSides=1, vSides=1, wSides=1, placement=\"bottom\"))\n",
-    "    core_clus = Cluster.ByTopologies(cores)\n",
-    "    \n",
+    "    core_clus = Topology.SelfMerge(Cluster.ByTopologies(cores))\n",
     "    plinths = []\n",
     "    plinth_clus = None\n",
     "    if plinth:\n",
@@ -159,8 +157,12 @@
     "        cols_clus = Cluster.ByTopologies(cols)\n",
     "        subtract_clus = Cluster.ByTopologies(subtract_vols)\n",
     "        bldg_clus = Topology.Difference(bldg_clus, subtract_clus)\n",
-    "        bldg_clus = Topology.Difference(bldg_clus, core_clus)\n",
-    "    ground_data = Plotly.DataByTopology(ground, faceColor=\"green\")\n",
+    "    ground = Topology.Difference(ground, bldg_clus)\n",
+    "    bldg_clus = Topology.Difference(bldg_clus, core_clus)\n",
+    "    if plinth:\n",
+    "        bldg_clus = Topology.Difference(bldg_clus, plinth_clus)\n",
+    "        plinth_clus = Topology.Difference(plinth_clus, core_clus)\n",
+    "    ground_data = Plotly.DataByTopology(ground, faceColor=\"purple\")\n",
     "    if plinth:\n",
     "        plinth_data = Plotly.DataByTopology(plinth_clus, faceColor=\"lightgrey\")\n",
     "    else:\n",
@@ -169,8 +171,8 @@
     "        columns_data = Plotly.DataByTopology(cols_clus, faceColor=\"grey\")\n",
     "    else:\n",
     "        columns_data = []\n",
-    "    bldg_data = Plotly.DataByTopology(bldg_clus, faceColor=\"blue\")\n",
-    "    core_data = Plotly.DataByTopology(core_clus, faceColor=\"lightblue\")\n",
+    "    bldg_data = Plotly.DataByTopology(bldg_clus, faceColor=\"green\")\n",
+    "    core_data = Plotly.DataByTopology(core_clus, faceColor=\"yellow\")\n",
     "    all_data = ground_data+plinth_data+columns_data+bldg_data+core_data\n",
     "    fig = Plotly.FigureByData(all_data)\n",
     "    Plotly.Show(fig)\n",
@@ -179,29 +181,38 @@
     "    cells = []\n",
     "    grd_cells = Topology.Cells(ground)\n",
     "    cells.append(grd_cells)\n",
-    "    selectors.append(getSelectors(grd_cells, \"label\", 0))\n",
+    "    selectors.append(getSelectors(grd_cells, [\"label\",\"title\"], [0, \"ground\"]))\n",
     "    if plinth:\n",
-    "        plinth_cells = Topology.Cells(plinth_clus)\n",
+    "        if isinstance(plinth_clus, topologic.Cell):\n",
+    "            plinth_cells = [plinth_clus]\n",
+    "        else:\n",
+    "            plinth_cells = Topology.Cells(plinth_clus)\n",
     "        cells.append(plinth_cells)\n",
-    "        selectors.append(getSelectors(plinth_cells, \"label\", 1))\n",
+    "        selectors.append(getSelectors(plinth_cells, [\"label\", \"title\"], [1, \"plinth\"]))\n",
     "    if columns:\n",
     "        column_cells = Topology.Cells(cols_clus)\n",
     "        cells.append(column_cells)\n",
-    "        selectors.append(getSelectors(column_cells, \"label\", 2))\n",
+    "        selectors.append(getSelectors(column_cells, [\"label\", \"title\"], [2, \"column\"]))\n",
     "    bldg_cells = Topology.Cells(bldg_clus)\n",
     "    cells.append(bldg_cells)\n",
-    "    selectors.append(getSelectors(bldg_cells, \"label\", 3))\n",
-    "    core_cells = Topology.Cells(core_clus)\n",
+    "    selectors.append(getSelectors(bldg_cells, [\"label\", \"title\"], [3, \"building\"]))\n",
+    "    if isinstance(core_clus, topologic.Cell):\n",
+    "        core_cells = [core_clus]\n",
+    "    else:\n",
+    "        core_cells = Topology.Cells(core_clus)\n",
     "    cells.append(core_cells)\n",
-    "    selectors.append(getSelectors(core_cells, \"label\", 4))\n",
+    "    selectors.append(getSelectors(core_cells, [\"label\", \"title\"], [4, \"core\"]))\n",
     "    selectors = Helper.Flatten(selectors)\n",
     "    cells = Helper.Flatten(cells)\n",
     "    everything = CellComplex.ByCells(cells)\n",
     "    everything = Topology.TransferDictionariesBySelectors(everything, selectors, tranCells=True)\n",
     "    g = Graph.ByTopology(everything)\n",
-    "    graph_data = Plotly.DataByGraph(g, vertexSize=4, vertexGroupKey=\"label\", vertexGroups=[0,1,2,3,4])\n",
+    "    graph_data = Plotly.DataByGraph(g, vertexSize=4, vertexGroupKey=\"label\", vertexLabelKey=\"title\", vertexGroups=[0,1,2,3,4])\n",
     "    bldg_data = Plotly.DataByTopology(everything, faceOpacity=opacity, edgeColor=\"lightgrey\", vertexColor=\"lightgrey\")\n",
     "    fig = Plotly.FigureByData(graph_data+bldg_data)\n",
+    "    Plotly.Show(fig)\n",
+    "    graph_data = Plotly.DataByGraph(g, vertexSize=6, vertexGroupKey=\"label\", vertexLabelKey=\"title\", vertexGroups=[0,1,2,3,4])\n",
+    "    fig = Plotly.FigureByData(graph_data)\n",
     "    Plotly.Show(fig)\n",
     "    dgl_graph = DGL.GraphByTopologicGraph(g, bidirectional=True, key=\"label\", categories=[0,1,2,3,4], node_attr_key='node_attr', tolerance=0.0001)\n",
     "    dataset = DGL.DatasetByGraphs({\"graphs\":[dgl_graph], \"labels\":[0]})\n",
@@ -216,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "8de8c299",
+   "execution_count": 14,
+   "id": "0ace9917",
    "metadata": {
     "scrolled": false
    },
@@ -225,7 +236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1994a2919d5246a5b30200dc40ef44f8",
+       "model_id": "789326b772f54666ac066014b512933c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -270,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38913fad",
+   "id": "6e76d6b2",
    "metadata": {
     "scrolled": true
    },
