Numerous Bug fixes, enhancements and new methods

--- a/notebooks/MEP01.ipynb
+++ b/notebooks/MEP01.ipynb
@@ -181,9 +181,9 @@
     "    sv = Edge.StartVertex(edge)\n",
     "    ev = Edge.EndVertex(edge)\n",
     "    length = Edge.Length(edge)\n",
-    "    if Cell.IsInternal(source, sv):\n",
+    "    if Verrtex.IsInternal(sv, source):\n",
     "        diam = 0.5\n",
-    "    elif Cell.IsInternal(corridor, sv) and Cell.IsInternal(corridor, ev):\n",
+    "    elif Vertex.IsInternal(sv, corridor) and Vertex.IsInternal(ev, corridor):\n",
     "        diam = 0.4\n",
     "    else:\n",
     "        diam = 0.2\n",
