Many New Methods and Bug Fixes. Bumped to v0.7.91
Face: Many new isovist metrics
Graph: Import/Export to NetworkX graphs, Community Detection, Much faster BetweenessCentrality
Plotly: Bug fixes for vertex size
Bumped to v0.7.91

--- a/notebooks/GraphByIFCPath.ipynb
+++ b/notebooks/GraphByIFCPath.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "3321055e-03fc-4d66-8051-c3e548b85ac0",
    "metadata": {},
    "outputs": [],
@@ -27,8 +27,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from topologicpy.Vertex import Vertex\n",
-    "from topologicpy.CellComplex import CellComplex\n",
     "from topologicpy.Topology import Topology\n",
     "from topologicpy.Dictionary import Dictionary\n",
     "from topologicpy.Graph import Graph\n",
@@ -39,18 +37,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "86029d47",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ******** CHANGE THIS PATH TO POINT TO YOUR OWN IFC FILE ********\n",
-    "ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\IFC2x3_Duplex_Difference_1.ifc\""
+    "ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\IFC2x3_Duplex_Difference_1.ifc\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "5bfaa643",
    "metadata": {},
    "outputs": [],
@@ -102,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "56fa6539",
    "metadata": {},
    "outputs": [],
@@ -123,8 +121,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Choose a renderer that works for your environment\n",
+    "\n",
+    "# renderer=\"browser\"\n",
+    "# renderer=\"jupyterlab\"\n",
+    "renderer=\"vscode\"\n",
+    "\n",
     "# Draw the topologies and the graph with color-coding\n",
-    "Topology.Show(graph1,\n",
+    "Topology.Show(topologies, graph1,\n",
     "              nameKey=\"IFC_name\",\n",
     "              sagitta= 0.05,\n",
     "              absolute=False,\n",
@@ -136,43 +140,10 @@
     "              showVertexLegend = False,\n",
     "              showEdgeLegend = False,\n",
     "              showFaceLegend = False,\n",
-    "              backgroundColor=\"white\", width=1024, height=900)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71afc003",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import TopologicPy modules\n",
-    "import sys\n",
-    "sys.path.append(\"C:/Users/sarwj/OneDrive - Cardiff University/Documents/GitHub/topologicpy/src\")\n",
-    "from topologicpy.Vertex import Vertex\n",
-    "from topologicpy.CellComplex import CellComplex\n",
-    "from topologicpy.Topology import Topology\n",
-    "from topologicpy.Dictionary import Dictionary\n",
-    "from topologicpy.Graph import Graph\n",
-    "from topologicpy.Helper import Helper\n",
-    "from topologicpy.Cluster import Cluster\n",
-    "\n",
-    "\n",
-    "components = Graph.ConnectedComponents(graph1)\n",
-    "# Show the three largest components\n",
-    "Topology.Show(components[:4],\n",
-    "            nameKey=\"IFC_name\",\n",
-    "            sagitta= 0.05,\n",
-    "            absolute=False,\n",
-    "            faceOpacity=0.1,\n",
-    "            vertexSizeKey=\"closeness_centrality\",\n",
-    "            vertexLabelKey=\"IFC_name\",\n",
-    "            vertexGroupKey=\"IFC_type\",\n",
-    "            vertexGroups=[\"Unknown\", \"IfcSpace\", \"IfcSlab\", \"IfcRoof\", \"IfcWall\", \"IfcWallStandardCase\", \"IfcDoor\", \"IfcWindow\"],\n",
-    "            showVertexLegend = False,\n",
-    "            showEdgeLegend = False,\n",
-    "            showFaceLegend = False,\n",
-    "            backgroundColor=\"white\", width=1024, height=900)"
+    "              backgroundColor=\"white\",\n",
+    "              width=1024,\n",
+    "              height=900,\n",
+    "              renderer=renderer)"
    ]
   }
  ],
