Fixed bug in importing IFC files. Bumped to v0.8.6
Fixed bug in importing IFC files. Bumped to v0.8.6

--- a/notebooks/PrincipalAxis_CanonicalMatrix.ipynb
+++ b/notebooks/PrincipalAxis_CanonicalMatrix.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,11 +102,11 @@
    "outputs": [],
    "source": [
     "# Object 01\n",
-    "mat01 = Topology.CanonicalMatrix(obj01, normalize=False)\n",
+    "mat01 = Topology.CanonicalMatrix(obj01, normalize=True)\n",
     "can_obj01 = Topology.Transform(obj01, mat01)\n",
     "\n",
     "# Object 02\n",
-    "mat02 = Topology.CanonicalMatrix(obj02, normalize=False)\n",
+    "mat02 = Topology.CanonicalMatrix(obj02, normalize=True)\n",
     "can_obj02 = Topology.Transform(obj02, mat02)\n",
     "\n",
     "# Show the result\n",
