More IFC bug fixes. Bumped to v0.8.7
More IFC Bug fixes for GraphByIFCFile
Bumped to v0.8.7

--- a/notebooks/GraphByIFCPath.ipynb
+++ b/notebooks/GraphByIFCPath.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "3321055e-03fc-4d66-8051-c3e548b85ac0",
    "metadata": {},
    "outputs": [],
@@ -37,24 +37,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "86029d47",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ******** CHANGE THIS PATH TO POINT TO YOUR OWN IFC FILE ********\n",
-    "ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\IFC2x3_Duplex_Difference_1.ifc\"\n"
+    "#ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\IFC2x3_Duplex_Difference_1.ifc\"\n",
+    "#ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\10.01_SM_0;0;0_4x3.ifc\"\n",
+    "ifc_file_path = r\"C:\\Users\\sarwj\\Downloads\\10.02_SM_Julierpass_4x3.ifc\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "5bfaa643",
    "metadata": {},
    "outputs": [],
    "source": [
     "# ****** CHANGE THIS LIST TO CHOOSE WHAT YOU WANT TO IMPORT FROM YOUR IFC FILE *******\n",
-    "include_types=[\"IfcSpace\", \"IfcSlab\", \"IfcRoof\", \"IfcWall\", \"IfcWallStandardCase\", \"IfcDoor\", \"IfcWindow\"]"
+    "#include_types=[\"IfcSpace\", \"IfcSlab\", \"IfcRoof\", \"IfcWall\", \"IfcWallStandardCase\", \"IfcDoor\", \"IfcWindow\"]\n",
+    "include_types = []"
    ]
   },
   {
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "56fa6539",
    "metadata": {},
    "outputs": [],
@@ -126,7 +129,7 @@
     "# renderer=\"browser\"\n",
     "# renderer=\"jupyterlab\"\n",
     "renderer=\"vscode\"\n",
-    "\n",
+    "print(topologies)\n",
     "# Draw the topologies and the graph with color-coding\n",
     "Topology.Show(topologies, graph1,\n",
     "              nameKey=\"IFC_name\",\n",
@@ -136,7 +139,7 @@
     "              vertexSizeKey=\"closeness_centrality\",\n",
     "              vertexLabelKey=\"IFC_name\",\n",
     "              vertexGroupKey=\"IFC_type\",\n",
-    "              vertexGroups=[\"Unknown\", \"IfcSpace\", \"IfcSlab\", \"IfcRoof\", \"IfcWall\", \"IfcWallStandardCase\", \"IfcDoor\", \"IfcWindow\"],\n",
+    "              vertexGroups=[\"Unknown\", \"IfcSpace\", \"IfcSlab\", \"IfcRoof\", \"IfcWall\", \"IfcWallStandardCase\", \"IfcDoor\", \"IfcWindow\", \"IfcFooting\", \"IfcPile\", \"IfcBuildingElementProxy\"],\n",
     "              showVertexLegend = False,\n",
     "              showEdgeLegend = False,\n",
     "              showFaceLegend = False,\n",
@@ -144,6 +147,19 @@
     "              width=1024,\n",
     "              height=900,\n",
     "              renderer=renderer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b7040fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = Topology.Dictionary(v)\n",
+    "keys = Dictionary.Keys(d)\n",
+    "for key in keys:\n",
+    "    print(key,\"  ---> \", Dictionary.ValueAtKey(d, key))\n"
    ]
   }
  ],
