--- a/notebooks/AlignVertices.ipynb
+++ b/notebooks/AlignVertices.ipynb
@@ -11,6 +11,7 @@
     "sys.path.append(\"C:/Users/sarwj/OneDrive - Cardiff University/Documents/GitHub/topologicpy/src\")\n",
     "\n",
     "from topologicpy.Vertex import Vertex\n",
+    "from topologicpy.Face import Face\n",
     "from topologicpy.Cell import Cell\n",
     "from topologicpy.CellComplex import CellComplex\n",
     "from topologicpy.Graph import Graph\n",
@@ -27,6 +28,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Choose your rendering environment\n",
+    "renderer = \"vscode\"\n",
+    "# renderer = \"notebook\"\n",
+    "# renderer = \"jupyterlab\"\n",
+    "# renderer = \"colab\"\n",
+    "# renderer = \"browser\"\n",
+    "\n",
     "v1 = Vertex.ByCoordinates(10, 5, 1.5)\n",
     "v2 = Vertex.ByCoordinates(5, 15, 1.5)\n",
     "v3 = Vertex.ByCoordinates(30, 10, 4.5)\n",
@@ -48,7 +56,7 @@
     "c7 = Cell.Wedge(origin=v8, width=16, length=9.8, height=4, flipHorizontal=True)\n",
     "\n",
     "spaces = [c1, c2, c3, c4, c5, c6, c7]\n",
-    "Topology.Show(spaces)\n"
+    "Topology.Show(spaces, renderer=renderer)\n"
    ]
   },
   {
@@ -73,7 +81,39 @@
     "\n",
     "cellComplex = CellComplex.ByCells(new_spaces)\n",
     "g = Graph.ByTopology(cellComplex, direct=False, viaSharedTopologies=True)\n",
-    "Topology.Show(cellComplex, g)"
+    "Topology.Show(cellComplex, g, renderer=renderer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topologicpy.Face import Face\n",
+    "\n",
+    "cells = Topology.Cells(cellComplex)\n",
+    "visited = []\n",
+    "for i, cell_a in enumerate(cells):\n",
+    "    for j, cell_b in enumerate(cells):\n",
+    "        if i != j and not (i,j) in visited:\n",
+    "            edges_a = Topology.Edges(cell_a)\n",
+    "            edges_b = Topology.Edges(cell_b)\n",
+    "            total_area = 0\n",
+    "            dict = Topology.SharedTopologies(cell_a, cell_b)\n",
+    "            shared_faces = dict['faces']\n",
+    "            if len(shared_faces) > 0:\n",
+    "                for shared_face in shared_faces:\n",
+    "                    total_area += Face.Area(shared_face)\n",
+    "                \n",
+    "                #Topology.Show(shared_faces,edges_a, edges_b, faceColor=\"red\", renderer=renderer)\n",
+    "                print(\"  Cells\",i+1, j+1,\"share\", total_area,\"sq.m.\")\n",
+    "            else:\n",
+    "                print(\"X Cells\",i+1, j+1,\"do not share any faces.\")\n",
+    "                #Topology.Show(edges_a, edges_b, renderer=renderer)\n",
+    "\n",
+    "            visited.append((i,j))\n",
+    "            visited.append((j,i))"
    ]
   }
  ],
