Bug Fixes and New Methods. Bumped to v0.8.10

--- a/notebooks/AlignVertices.ipynb
+++ b/notebooks/AlignVertices.ipynb
@@ -19,6 +19,7 @@
     "from topologicpy.Dictionary import Dictionary\n",
     "from topologicpy.Vector import Vector\n",
     "from topologicpy.Helper import Helper\n",
+    "print(\"This jupyter notebook reuires topologicpy v.0.8.10 or newer\")\n",
     "print(Helper.Version())"
    ]
   },
@@ -65,16 +66,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Grids\n",
-    "x_list = [0, 3.5, 10, 20, 40]\n",
-    "y_list = [0, 10, 20, 30]\n",
-    "z_list = [0, 3, 6, 9]\n",
+    "# An alternative method to get the grid values automatically:\n",
+    "\n",
+    "x_epsilon = 0.81\n",
+    "y_epsilon = 0.51\n",
+    "z_epsilon = 0.51\n",
+    "mantissa = 2\n",
+    "\n",
+    "all_vertices = [v for space in spaces for v in Topology.Vertices(space)]\n",
+    "x_vertices, y_vertices, z_vertices = zip(*[[Vertex.X(v, mantissa=mantissa), \n",
+    "                                            Vertex.Y(v, mantissa=mantissa), \n",
+    "                                            Vertex.Z(v, mantissa=mantissa)] for v in all_vertices])\n",
+    "\n",
+    "x_list = Helper.BinAndAverage(list(x_vertices), tolerance=x_epsilon, mantissa=1)\n",
+    "y_list = Helper.BinAndAverage(list(y_vertices), tolerance=y_epsilon, mantissa=1)\n",
+    "z_list = Helper.BinAndAverage(list(z_vertices), tolerance=z_epsilon, mantissa=1)\n",
+    "\n",
+    "# Or if you wish to manually set the grids\n",
+    "# x_list = [0, 3.5, 10, 20, 40]\n",
+    "# y_list = [0, 10, 20, 30]\n",
+    "# z_list = [0, 3, 6, 9, 10]\n",
+    "\n",
+    "print(\"X Axis:\", x_list)\n",
+    "print(\"Y Axis:\", y_list)\n",
+    "print(\"Z Axis:\", z_list)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "new_spaces = []\n",
     "for space in spaces:\n",
     "    vertices = Topology.Vertices(space)\n",
     "    new_vertices = []\n",
     "    for v in vertices:\n",
-    "        new_v = Vertex.AlignCoordinates(v, xList=x_list, yList=y_list, zList=z_list, xEpsilon=0.81, yEpsilon=0.51, zEpsilon= 0.51)\n",
+    "        new_v = Vertex.AlignCoordinates(v, xList=x_list, yList=y_list, zList=z_list, xEpsilon=x_epsilon, yEpsilon=y_epsilon, zEpsilon= z_epsilon)\n",
     "        new_vertices.append(new_v)\n",
     "    new_space = Topology.SelfMerge(Topology.ReplaceVertices(space, verticesA = vertices, verticesB = new_vertices))\n",
     "    new_spaces.append(new_space)\n",
@@ -90,8 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from topologicpy.Face import Face\n",
-    "\n",
     "cells = Topology.Cells(cellComplex)\n",
     "visited = []\n",
     "for i, cell_a in enumerate(cells):\n",
