Improved Graph.Compare. Bumped to v0.8.22
Graph.Compare API has changed. Now the metrics can be compared invidividually each with their own weight. Also, all weights are defaulted to 0, so now you only need to specify the weights that you are interested in. The others will be ignored.
Dictionary.ValueatKey now behaves like the .get method for python dictionaries and returns the default value if it cannot find the key/value in the dictionary.
Bumped to version v0.8.22

--- a/notebooks/SubgraphMatching.ipynb
+++ b/notebooks/SubgraphMatching.ipynb
@@ -124,23 +124,20 @@
    "outputs": [],
    "source": [
     "g_top = Graph.Topology(supergraph)\n",
-    "g_top = Topology.Scale(g_top, Topology.Centroid(g_top), 1.01, 1.01, 1.01)\n",
+    "g_top = Topology.Scale(g_top, Topology.Centroid(g_top), 1.1, 1.1, 1.1)\n",
     "verts = Topology.Vertices(g_top)\n",
     "edges = Topology.Edges(g_top)\n",
     "g2 = Graph.ByVerticesEdges(verts, edges)\n",
     "similarity = Graph.Compare(supergraph, g2,\n",
-    "                           weightAttributes=0,\n",
-    "                           weightGeometry=0,\n",
     "                           weightJaccard=1,\n",
-    "                           weightMetrics=2,\n",
+    "                           weightClosenessCentrality=1,\n",
     "                           weightStructure=1,\n",
-    "                           weightWL=0,\n",
-    "                           iterations=3,\n",
     "                           vertexIDKey=\"id\",\n",
     "                           edgeWeightKey=\"length\",\n",
     "                           mantissa=2,\n",
     "                           silent=False)\n",
-    "print(\"Overall Similarity\", similarity)\n"
+    "for key in similarity.keys():\n",
+    "    print(key+\":\", similarity[key])\n"
    ]
   },
   {
@@ -166,16 +163,6 @@
     "    # Show the matched subgraph superimposed over the supergraph\n",
     "    #print(str(i+1)+\". Subgraph match superimposed over the supergaph\")\n",
     "Topology.Show(supergraph, g2, vertexSize=8, vertexLabelKey=\"id\", showVertexLabel=True, vertexSizeKey=\"vertex_size\", vertexColorKey=\"vertex_color\", edgeWidthKey=\"edge_width\", edgeColorKey=\"edge_color\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jc = Graph.WeightedJaccardSimilarity(supergraph, supergraph, vertexA=Graph.Vertices(supergraph)[0], vertexB=Graph.Vertices(supergraph)[0])\n",
-    "print(jc)"
    ]
   }
  ],
