Added HBJSON import to the Honeybee class. Bumped to v0.8.55

--- a/notebooks/EnergyModel.ipynb
+++ b/notebooks/EnergyModel.ipynb
@@ -153,10 +153,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import openstudio\n",
-    "\n",
-    "#ddyModel = openstudio.openstudioenergyplus.loadAndTranslateIdf(openstudio.toPath(designDayFilePath))\n",
-    "\n",
     "model = EnergyModel.ByTopology(building=building,\n",
     "                               shadingSurfaces = shadingSurfaces,\n",
     "                               osModelPath=osModelPath,\n",
@@ -171,10 +167,34 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fcd6fd3",
+   "metadata": {},
+   "source": [
+    "## Create an HBJSON Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c52a9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topologicpy.Honeybee import Honeybee\n",
+    "\n",
+    "hb_model = Honeybee.ModelByTopology(building, shadingSurfaces)\n",
+    "\n",
+    "print(\"THIS IS A SNIPPET OF THE OSM MODEL TO VERIFY THAT IT WORKED.\")\n",
+    "print(str(hb_model)[:900])\n",
+    "print(\"\\nDONE\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "166f68da",
    "metadata": {},
    "source": [
-    "## Export the model to OSM and GBXML"
+    "## (Optional) Export the model to OSM, GBXML, or HBJSON"
    ]
   },
   {
@@ -185,8 +205,10 @@
    "outputs": [],
    "source": [
     "# Uncomment these files and change output path if you wish to export the model\n",
-    "#status01 = EnergyModel.ExportToOSM(model, outputFolder+\"/EnergModel.osm\", overwrite=True)\n",
-    "#status02 = EnergyModel.ExportToGbXML(model, outputFolder+\"/EnergModel.xml\", overwrite=True)\n"
+    "#status01 = EnergyModel.ExportToOSM(model, outputFolder+\"/EnergyModel.osm\", overwrite=True)\n",
+    "#status02 = EnergyModel.ExportToGbXML(model, outputFolder+\"/EnergyModel.xml\", overwrite=True)\n",
+    "#status03 = Honeybee.ExportToHBJSON(hb_model, outputFolder+\"/EnergyModel.hbjson\", overwrite=True)\n",
+    "print(\"\\DONE\")"
    ]
   },
   {
