Enhanced Kuzu and Graph methods. Bumped to v0.8.58

--- a/notebooks/Kuzu.ipynb
+++ b/notebooks/Kuzu.ipynb
@@ -27,6 +27,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from topologicpy.Vertex import Vertex\n",
+    "from topologicpy.Edge import Edge\n",
     "from topologicpy.Topology import Topology\n",
     "from topologicpy.CellComplex import CellComplex\n",
     "from topologicpy.Graph import Graph\n",
@@ -51,7 +53,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "print(\"This workflow was designed and verified to work with python 3.11 and TopologicPy 0.8.56.\\n\")\n",
+    "print(\"This workflow was designed and verified to work with python 3.11 and TopologicPy 0.8.58.\\n\")\n",
     "py_version = sys.version.split()[0]\n",
     "print(\"Python version:\", py_version)\n",
     "\n",
@@ -76,13 +78,63 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = CellComplex.Prism()\n",
-    "g = Graph.ByTopology(c, toExteriorTopologies=True)\n",
+    "c = CellComplex.Prism(uSides=3, vSides=3, wSides=3)\n",
+    "sample_graph = Graph.ByTopology(c, toExteriorTopologies=False)\n",
     "# Set a graph_id\n",
     "d = Dictionary.ByKeysValues([\"graph_id\", \"title\"], [1, \"Sample Graph\"])\n",
-    "g = Topology.SetDictionary(g, d)\n",
-    "Topology.Show(g, vertexSize=12)\n",
+    "sample_graph = Topology.SetDictionary(sample_graph, d)\n",
+    "vertices = Graph.Vertices(sample_graph)\n",
+    "for i, v in enumerate(vertices):\n",
+    "    d = Dictionary.ByKeyValue(\"label\", str(i+1))\n",
+    "    v = Topology.SetDictionary(v, d)\n",
+    "Topology.Show(sample_graph, vertexSize=12, showVertexLabel=True, vertexLabelKey=\"label\")\n",
     "print(\"\\nDone\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5da4599f",
+   "metadata": {},
+   "source": [
+    "## Create an Induced Subgraph from 10 of the vertices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2cac97e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from topologicpy.Vertex import Vertex\n",
+    "from topologicpy.Edge import Edge\n",
+    "\n",
+    "vertices = Graph.Vertices(sample_graph)[:10]\n",
+    "induced_g = Graph.InducedSubgraph(sample_graph, vertices, strict=True)\n",
+    "Topology.Show(induced_g, vertexSize=12, showVertexLabel=True, vertexLabelKey=\"label\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67609de2",
+   "metadata": {},
+   "source": [
+    "## Create a K-Hops Subgraph of the Sample Graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c2191b36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vertices = Graph.Vertices(sample_graph)[0:1]\n",
+    "sub_graph = Graph.KHopsSubgraph(sample_graph, vertices, k=2)\n",
+    "# Set a graph_id\n",
+    "d = Dictionary.ByKeysValues([\"graph_id\", \"title\"], [2, \"Sub Graph\"])\n",
+    "sub_graph = Topology.SetDictionary(sub_graph, d)\n",
+    "Topology.Show(sub_graph, vertexSize=12, showVertexLabel=True, vertexLabelKey=\"label\")"
    ]
   },
   {
@@ -90,7 +142,7 @@
    "id": "4f9b95ca",
    "metadata": {},
    "source": [
-    "## Specify the Kuzu database file path (usually the name ends with .kuzu)"
+    "## Specify the Kuzu database file path (usually the name ends with .kuzu) and initialize the Database manager."
    ]
   },
   {
@@ -100,7 +152,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your database will be created and maintained at the following db_path\n",
     "db_path = r\"C:\\Users\\sarwj\\OneDrive - Cardiff University\\Desktop\\Test01.kuzu\"\n",
+    "manager = Kuzu.Manager(db_path)\n",
     "print(\"\\nDone\")"
    ]
   },
@@ -119,9 +173,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "status = Kuzu.EmptyDatabase(db_path)\n",
+    "status = Kuzu.EmptyDatabase(manager)\n",
     "if status:\n",
-    "    print(\"The Kuzu database has been emptied.\")\n",
+    "    print(\"The Kuzu database has been successfully emptied.\")\n",
     "else:\n",
     "    print(\"Emptying the Kuzu database has failed.\")\n",
     "print(\"\\nDone\")"
@@ -132,7 +186,7 @@
    "id": "85572ede",
    "metadata": {},
    "source": [
-    "## Upsert the sample topologic graph to the Kuzu database\n",
+    "## Upsert the sample topologic graph and subgraph to the Kuzu database\n",
     "(Upsert is a portmanteau of \"update\" and \"insert\".  Upsert is a database operation that inserts a new record into a table if a record with a matching key doesn't exist, or updates an existing record if a match is found)"
    ]
   },
@@ -143,9 +197,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph_id = Kuzu.UpsertGraph(db_path, g, graphIDKey=\"graph_id\")\n",
-    "print(\"Graph ID:\", graph_id, \"has been upserted to the Kuzu database\")\n",
+    "graph_id1 = Kuzu.UpsertGraph(manager, sample_graph, graphIDKey=\"graph_id\")\n",
+    "print(\"Graph ID:\", graph_id1, \"has been upserted to the Kuzu database\")\n",
+    "graph_id2 = Kuzu.UpsertGraph(manager, sub_graph, graphIDKey=\"graph_id\")\n",
+    "print(\"Graph ID:\", graph_id2, \"has been upserted to the Kuzu database\")\n",
     "print(\"\\nDone\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4a158ae",
+   "metadata": {},
+   "source": [
+    "## List all current Graph Cards"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d3fc92e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cards = Kuzu.ListGraphs(manager)\n",
+    "print(\"The Kuzu database contains:\", len(cards), \"graphs.\")\n",
+    "for card in cards:\n",
+    "    print(card)"
    ]
   },
   {
@@ -153,7 +230,7 @@
    "id": "d286450d",
    "metadata": {},
    "source": [
-    "## Retrieve the graph back through its id."
+    "## Retrieve the graphs back through their id."
    ]
   },
   {
@@ -163,9 +240,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_g = Kuzu.GraphByID(db_path, graph_id)\n",
-    "print(new_g)\n",
-    "Topology.Show(new_g, vertexSize=12)\n",
+    "graph_ids = [card['id'] for card in cards]\n",
+    "print(\"Graph IDs:\", graph_ids)\n",
+    "new_graphs = []\n",
+    "for graph_id in graph_ids:\n",
+    "    new_graph = Kuzu.GraphByID(manager, graph_id)\n",
+    "    new_graphs.append(new_graph)\n",
+    "    Topology.Show(new_graph, vertexSize=12, showVertexLabel=True, vertexLabelKey=\"label\")\n",
     "print(\"\\nDone\")"
    ]
   },
@@ -184,8 +265,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_dict = Topology.Dictionary(new_g)\n",
-    "print(Dictionary.Keys(g_dict), Dictionary.Values(g_dict))\n",
+    "for new_graph in new_graphs:\n",
+    "    g_dict = Topology.Dictionary(new_graph)\n",
+    "    print(Dictionary.Keys(g_dict), Dictionary.Values(g_dict))\n",
     "print(\"\\nDone\")"
    ]
   },
@@ -194,7 +276,7 @@
    "id": "f726a128",
    "metadata": {},
    "source": [
-    "## Check the vertices dictionaries"
+    "## Check the vertices dictionaries of the Subgraph"
    ]
   },
   {
@@ -204,7 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vertices = Graph.Vertices(new_g)\n",
+    "vertices = Graph.Vertices(new_graphs[1], sortBy=None)\n",
     "for v in vertices:\n",
     "    v_dict = Topology.Dictionary(v)\n",
     "    print(Dictionary.Keys(v_dict), Dictionary.Values(v_dict))\n",
@@ -216,7 +298,7 @@
    "id": "fd827941",
    "metadata": {},
    "source": [
-    "## Check the edge dictionaries"
+    "## Check the edge dictionaries of the subgraph"
    ]
   },
   {
@@ -226,11 +308,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "edges = Graph.Edges(new_g)\n",
+    "edges = Graph.Edges(new_graphs[1], sortBy=\"label\", reverse=True)\n",
     "for e in edges:\n",
     "    e_dict = Topology.Dictionary(e)\n",
     "    print(Dictionary.Keys(e_dict), Dictionary.Values(e_dict))\n",
     "print(\"\\nDone\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61abacf4",
+   "metadata": {},
+   "source": [
+    "## Try ByCSV Files\n",
+    "You can load topologic graphs (created for machine learning) that are saved in CSV format. See Graph.ByCSVPath. Try Kuzu.ByCSVPath on your own"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f42a933",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_path = \"INPUT YOUR CSV FOLDER PATH HERE\"\n",
+    "\n",
+    "status = Kuzu.EmptyDatabase(manager)\n",
+    "if status:\n",
+    "    print(\"The Kuzu database has been successfully emptied.\")\n",
+    "else:\n",
+    "    print(\"Emptying the Kuzu database has failed.\")\n",
+    "print(\"\\nDone\")\n",
+    "\n",
+    "_ = Kuzu.ByCSVPath(manager, csv_path)\n",
+    "cards = Kuzu.ListGraphs(manager)\n",
+    "print(\"The Kuzu database contains:\", len(cards), \"graphs.\")\n",
+    "print(\"Printing up to 10 cards or the total number of cards whichever is less.\")\n",
+    "for card in min(len(cards), 10):\n",
+    "    print(card)"
    ]
   }
  ],
