Bug Fixes. Added proximity metric
Spatial relationships now include proximity with user-defined distance ranges and labels (e.g. [1, 5, 10], ["near", "intermediate", "far"]

--- a/notebooks/IFC_SpatialRelationshipsGraph.ipynb
+++ b/notebooks/IFC_SpatialRelationshipsGraph.ipynb
@@ -85,7 +85,10 @@
     "                 \"equals\": \"#97FF00\",\n",
     "                 \"overlaps\": \"#FFEA00\",\n",
     "                 \"touches\": \"#550E55\",\n",
-    "                 \"within\": \"#FF0000\"\n",
+    "                 \"within\": \"#FF0000\",\n",
+    "                 \"near\": \"#AAAAAA\",\n",
+    "                 \"intermediate\": \"#666666\",\n",
+    "                 \"far\": \"#000000\"\n",
     "                }\n"
    ]
   },
@@ -151,6 +154,7 @@
     "for e in edges:\n",
     "    d = Topology.Dictionary(e)\n",
     "    relFwd = Dictionary.ValueAtKey(d, \"relFwd\")\n",
+    "    print(\"Relationship:\", relFwd)\n",
     "    edgeColor = color_mapping[relFwd]\n",
     "    d = Dictionary.SetValueAtKey(d, \"edgeColor\", edgeColor)\n",
     "    d = Dictionary.SetValueAtKey(d, \"edgeWidth\", 3)\n",
@@ -179,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Topology.Show(objects, graph, backgroundColor=\"white\", vertexSizeKey=\"vertexSize\", edgeWidthKey=\"edgeWidth\", edgeColorKey=\"edgeColor\")"
+    "Topology.Show(objects, graph, sagitta=0.15, absolute=False, backgroundColor=\"white\", vertexSizeKey=\"vertexSize\", edgeWidthKey=\"edgeWidth\", edgeColorKey=\"edgeColor\")"
    ]
   }
  ],
